DAOs do subsistema de contratos e correções das dtos e idaos do sistema de loja